# src/main/openapi/ds-license-openapi_v1.yaml
@@ -519,20 +519,20 @@ paths:
                   $ref: '#/components/schemas/GroupType'
 
   # Audit  
-  /audit/list:
+  /audit/auditEntries':
     get:
       tags:
         - 'DsAudit'
-      summary: 'Return list of AuditLog entries. Parameters are modifiedTime and changeName, both are optional. Maximum returned is 100. Use modifiedTime for pagination'
-      operationId: getAuditLogList
+      summary: 'Return list of AuditLog entries. Parameters are modifiedTimeStart and changeName, both are optional. Maximum returned is 100. Use modifiedTime for pagination'
+      operationId: getAuditLogOlderThanModifiedTime
       security:
         - KBOAuth:
             - ds-license-readonly
             - ds-license-admin
       parameters:
-        - name: modifiedTime
+        - name: modifiedTimeStart
           in: query
-          description: 'List latest Auditlog entries less than modifiedTime. Will default to current time if modifiedTime is not set in request.'
+          description: 'List latest Auditlog entries less than modifiedTimeStart. Will default to current time if modifiedTimeStart is not set in request.'
           schema:
             type: integer
             format: int64            
@@ -541,8 +541,7 @@ paths:
           description: 'List of auditlog entries of this changeName type. If null will return all changeName types.'
           schema:
             $ref: '#/components/schemas/ObjectTypeEnum'
-            nullable: true
-                                                         
+            nullable: true                                                        
       responses:
         '200':
           description: 'List of AuditLogEntryOutput'
@@ -552,7 +551,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AuditLogEntryOutput'
-  
+
   /audit/auditEntryById:
     get:
       tags:
@@ -2194,8 +2193,7 @@ components:
           type: integer
           format: int32
           description: 'Number of records updated'
-          
-          
+                    
   securitySchemes:
     KBOAuth:
       type: oauth2
